Fixed spacing in between elements

--- a/MMM-DailyPokemon.css
+++ b/MMM-DailyPokemon.css
@@ -10,14 +10,13 @@
  */
 
 #poke-wrapper {
-	/*border: 1px solid blue;*/
+	position: relative;
+	bottom: 50px;
 }
 
-#poke-header {
+#poke-header, #poke-name {
 	border-bottom: 1px solid white;
-	color: #666;
-	/*border: 1px solid blue;*/
-
+	color: white;
 }
 
 #poke-pic {
@@ -26,30 +25,26 @@
 }
 
 #poke-pic-grayscale {
-	/*border: 1px solid blue;*/
-
+	position: relative;
+	bottom: 50px;
 	width: 200px;
 	height: auto;
 	filter: grayscale(100%);
 }
 
 #poke-pic-grayscale-type {
+	position: relative;
+	bottom: 100px;
 	width: 50px;
 	height: auto;
 	filter: grayscale(100%);
-	/*border: 1px solid yellow;*/
-
 }
 
 #poke-types {
-	/*border: 1px solid blue;*/
 	padding: 0px;
 }
 
 #poke-types p{
-	/*border: 1px solid green;*/
-
-
 	text-decoration: none;
 	display: inline-block;
 	margin-right: 3px;
